chore: update env config

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,15 +3,14 @@ services:
     build:
       dockerfile: Dockerfile.dev
     ports:
-      - "3000:3000" # Exemplo: mapeia a porta 3000 do container para a porta 3000 da sua máquina
+      - "5173:5173"
     volumes:
-      - .:/app # Monta o diretório local da sua aplicação Node.js dentro do container
+      - .:/app
     working_dir: /app
-    stdin_open: true # Permite entrada padrão (para interagir com o shell)
-    tty: true        # Aloca um pseudo-TTY (para interagir com o shell)
+    container_name: "retrolauncher_dev_env"
+    stdin_open: true
+    tty: true
     entrypoint: ["sh"]
-    environment:
-      NODE_ENV: development # Exemplo de variável de ambiente para Node.js
     networks:
       - app-network
 
