--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,6 +1,9 @@
 FROM golang:latest
-RUN apt update && apt install nodejs -y
+RUN apt update
+RUN apt install nodejs -y
+RUN apt install npm -y
 RUN go install github.com/wailsapp/wails/v2/cmd/wails@latest
 WORKDIR /app
 COPY . .
+EXPOSE 5173
 ENTRYPOINT ["sh"]
