--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -7,6 +7,7 @@ RUN apt install make -y
 RUN apt install libgtk-3-dev -y
 RUN apt install libwebkit2gtk-4.1-dev -y
 RUN go install github.com/wailsapp/wails/v2/cmd/wails@latest
+RUN apt install xvfb -y
 WORKDIR /app
 COPY . .
 EXPOSE 5173
