--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -8,6 +8,7 @@ RUN apt install libgtk-3-dev -y
 RUN apt install libwebkit2gtk-4.1-dev -y
 RUN go install github.com/wailsapp/wails/v2/cmd/wails@latest
 RUN apt install xvfb -y
+RUN apt install dbus-x11 -y
 WORKDIR /app
 COPY . .
 EXPOSE 5173
